// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`renders correctly with MLB performance type 1`] = `
.c7 {
  display: inline-block;
  vertical-align: middle;
}

.c7 path {
  fill: #FFFFFF;
}

.c1 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-direction: row;
  -ms-flex-direction: row;
  flex-direction: row;
  -webkit-box-pack: justify;
  -webkit-justify-content: space-between;
  -ms-flex-pack: justify;
  justify-content: space-between;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  margin-bottom: 15px;
}

.c4 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-direction: row;
  -ms-flex-direction: row;
  flex-direction: row;
  -webkit-box-pack: justify;
  -webkit-justify-content: space-between;
  -ms-flex-pack: justify;
  justify-content: space-between;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
}

.c9 {
  -webkit-flex: 1;
  -ms-flex: 1;
  flex: 1;
}

.c12 {
  -webkit-flex: 2;
  -ms-flex: 2;
  flex: 2;
}

.c11 {
  margin: 0;
  color: #FFFFFF;
  font-size: 14px;
  font-weight: 100;
  font-family: FuturaPT,Roboto,Helvetica,sans-serif;
  -webkit-letter-spacing: 1px;
  -moz-letter-spacing: 1px;
  -ms-letter-spacing: 1px;
  letter-spacing: 1px;
}

.c3 {
  position: relative;
  padding: 15px;
  font-size: 14px;
  border: 2px solid #0A169A;
  border-radius: 3px;
  background: #FFFFFF;
  cursor: pointer;
}

.c3::-webkit-input-placeholder {
  color: #999999;
}

.c3::-moz-placeholder {
  color: #999999;
}

.c3:-ms-input-placeholder {
  color: #999999;
}

.c3::placeholder {
  color: #999999;
}

.c8 {
  position: absolute;
  top: calc(100%);
  left: 0;
  width: 100%;
  z-index: 10;
  border: 1px solid #EEEEEE;
  box-shadow: 0 20px 20px rgba(0,0,0,0.06);
  -webkit-transition: 0.1s ease-in-out all;
  transition: 0.1s ease-in-out all;
  opacity: 0;
  -webkit-transform: translateY(20px);
  -ms-transform: translateY(20px);
  transform: translateY(20px);
  visibility: hidden;
  margin-top: 5px;
}

.c6 {
  margin-left: 10px;
  -webkit-flex-shrink: 0;
  -ms-flex-negative: 0;
  flex-shrink: 0;
}

.c0 {
  padding: 25px;
  color: #FFFFFF;
}

.c5 {
  color: #070707;
  font-size: 18px;
  font-weight: normal;
  margin: 0;
  padding: 0;
  vertical-align: top;
  color: #FFFFFF;
  text-transform: uppercase;
  -webkit-letter-spacing: 0.5px;
  -moz-letter-spacing: 0.5px;
  -ms-letter-spacing: 0.5px;
  letter-spacing: 0.5px;
  font-weight: bold;
}

.c10 {
  color: #0A169A;
  font-size: 22px;
  font-weight: normal;
  margin: 0;
  padding: 0;
  color: #FFFFFF;
  font-weight: bold;
}

.c2 {
  border: none;
  padding: 0;
  background: none;
}

<div
  className="c0"
>
  <div
    className="c1"
    direction="row"
  >
    <div>
      <div
        autoComplete="off"
        className="c2 c3"
        onClick={[Function]}
      >
        <div
          className="c4"
        >
          <h4
            className="c5"
            color="#070707"
          >
            Select a Season
          </h4>
          <svg
            className="c6 c7"
            color="#FFFFFF"
            height="12px"
            viewBox="0 0 24 24"
            width="12px"
          >
            <path
              d="M0,6.5l12,12,12-12Z"
            />
          </svg>
        </div>
        <div
          className="c8"
        />
      </div>
    </div>
  </div>
  <div
    className="c4"
    direction="row"
  >
    <div
      className="c9"
    >
      <h3
        className="c10"
        color="#0A169A"
      >
        10 - 1
      </h3>
      <p
        className="c11"
        color="#FFFFFF"
        letterSpacing="1px"
        size="14px"
      >
        <i>
          Win - Loss
        </i>
      </p>
    </div>
    <div
      className="c12"
    >
      <h3
        className="c10"
        color="#0A169A"
      >
        --
      </h3>
      <p
        className="c11"
        color="#FFFFFF"
        letterSpacing="1px"
        size="14px"
      >
        <i>
          Events Remaining
        </i>
      </p>
    </div>
  </div>
</div>
`;

exports[`renders correctly with MLS performance type 1`] = `
.c7 {
  display: inline-block;
  vertical-align: middle;
}

.c7 path {
  fill: #FFFFFF;
}

.c1 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-direction: row;
  -ms-flex-direction: row;
  flex-direction: row;
  -webkit-box-pack: justify;
  -webkit-justify-content: space-between;
  -ms-flex-pack: justify;
  justify-content: space-between;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  margin-bottom: 15px;
}

.c4 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-direction: row;
  -ms-flex-direction: row;
  flex-direction: row;
  -webkit-box-pack: justify;
  -webkit-justify-content: space-between;
  -ms-flex-pack: justify;
  justify-content: space-between;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
}

.c9 {
  -webkit-flex: 1;
  -ms-flex: 1;
  flex: 1;
}

.c12 {
  -webkit-flex: 2;
  -ms-flex: 2;
  flex: 2;
}

.c11 {
  margin: 0;
  color: #FFFFFF;
  font-size: 14px;
  font-weight: 100;
  font-family: FuturaPT,Roboto,Helvetica,sans-serif;
  -webkit-letter-spacing: 1px;
  -moz-letter-spacing: 1px;
  -ms-letter-spacing: 1px;
  letter-spacing: 1px;
}

.c3 {
  position: relative;
  padding: 15px;
  font-size: 14px;
  border: 2px solid #0A169A;
  border-radius: 3px;
  background: #FFFFFF;
  cursor: pointer;
}

.c3::-webkit-input-placeholder {
  color: #999999;
}

.c3::-moz-placeholder {
  color: #999999;
}

.c3:-ms-input-placeholder {
  color: #999999;
}

.c3::placeholder {
  color: #999999;
}

.c8 {
  position: absolute;
  top: calc(100%);
  left: 0;
  width: 100%;
  z-index: 10;
  border: 1px solid #EEEEEE;
  box-shadow: 0 20px 20px rgba(0,0,0,0.06);
  -webkit-transition: 0.1s ease-in-out all;
  transition: 0.1s ease-in-out all;
  opacity: 0;
  -webkit-transform: translateY(20px);
  -ms-transform: translateY(20px);
  transform: translateY(20px);
  visibility: hidden;
  margin-top: 5px;
}

.c6 {
  margin-left: 10px;
  -webkit-flex-shrink: 0;
  -ms-flex-negative: 0;
  flex-shrink: 0;
}

.c0 {
  padding: 25px;
  color: #FFFFFF;
}

.c5 {
  color: #070707;
  font-size: 18px;
  font-weight: normal;
  margin: 0;
  padding: 0;
  vertical-align: top;
  color: #FFFFFF;
  text-transform: uppercase;
  -webkit-letter-spacing: 0.5px;
  -moz-letter-spacing: 0.5px;
  -ms-letter-spacing: 0.5px;
  letter-spacing: 0.5px;
  font-weight: bold;
}

.c10 {
  color: #0A169A;
  font-size: 22px;
  font-weight: normal;
  margin: 0;
  padding: 0;
  color: #FFFFFF;
  font-weight: bold;
}

.c2 {
  border: none;
  padding: 0;
  background: none;
}

<div
  className="c0"
>
  <div
    className="c1"
    direction="row"
  >
    <div>
      <div
        autoComplete="off"
        className="c2 c3"
        onClick={[Function]}
      >
        <div
          className="c4"
        >
          <h4
            className="c5"
            color="#070707"
          >
            Select a Season
          </h4>
          <svg
            className="c6 c7"
            color="#FFFFFF"
            height="12px"
            viewBox="0 0 24 24"
            width="12px"
          >
            <path
              d="M0,6.5l12,12,12-12Z"
            />
          </svg>
        </div>
        <div
          className="c8"
        />
      </div>
    </div>
  </div>
  <div
    className="c4"
    direction="row"
  >
    <div
      className="c9"
    >
      <h3
        className="c10"
        color="#0A169A"
      >
        10 - 1 - 3
      </h3>
      <p
        className="c11"
        color="#FFFFFF"
        letterSpacing="1px"
        size="14px"
      >
        <i>
          Win - Loss - Tie
        </i>
      </p>
    </div>
    <div
      className="c12"
    >
      <h3
        className="c10"
        color="#0A169A"
      >
        --
      </h3>
      <p
        className="c11"
        color="#FFFFFF"
        letterSpacing="1px"
        size="14px"
      >
        <i>
          Events Remaining
        </i>
      </p>
    </div>
  </div>
</div>
`;

exports[`renders correctly with NCAAB performance type 1`] = `
.c7 {
  display: inline-block;
  vertical-align: middle;
}

.c7 path {
  fill: #FFFFFF;
}

.c1 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-direction: row;
  -ms-flex-direction: row;
  flex-direction: row;
  -webkit-box-pack: justify;
  -webkit-justify-content: space-between;
  -ms-flex-pack: justify;
  justify-content: space-between;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  margin-bottom: 15px;
}

.c4 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-direction: row;
  -ms-flex-direction: row;
  flex-direction: row;
  -webkit-box-pack: justify;
  -webkit-justify-content: space-between;
  -ms-flex-pack: justify;
  justify-content: space-between;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
}

.c9 {
  -webkit-flex: 1;
  -ms-flex: 1;
  flex: 1;
}

.c12 {
  -webkit-flex: 2;
  -ms-flex: 2;
  flex: 2;
}

.c11 {
  margin: 0;
  color: #FFFFFF;
  font-size: 14px;
  font-weight: 100;
  font-family: FuturaPT,Roboto,Helvetica,sans-serif;
  -webkit-letter-spacing: 1px;
  -moz-letter-spacing: 1px;
  -ms-letter-spacing: 1px;
  letter-spacing: 1px;
}

.c3 {
  position: relative;
  padding: 15px;
  font-size: 14px;
  border: 2px solid #0A169A;
  border-radius: 3px;
  background: #FFFFFF;
  cursor: pointer;
}

.c3::-webkit-input-placeholder {
  color: #999999;
}

.c3::-moz-placeholder {
  color: #999999;
}

.c3:-ms-input-placeholder {
  color: #999999;
}

.c3::placeholder {
  color: #999999;
}

.c8 {
  position: absolute;
  top: calc(100%);
  left: 0;
  width: 100%;
  z-index: 10;
  border: 1px solid #EEEEEE;
  box-shadow: 0 20px 20px rgba(0,0,0,0.06);
  -webkit-transition: 0.1s ease-in-out all;
  transition: 0.1s ease-in-out all;
  opacity: 0;
  -webkit-transform: translateY(20px);
  -ms-transform: translateY(20px);
  transform: translateY(20px);
  visibility: hidden;
  margin-top: 5px;
}

.c6 {
  margin-left: 10px;
  -webkit-flex-shrink: 0;
  -ms-flex-negative: 0;
  flex-shrink: 0;
}

.c0 {
  padding: 25px;
  color: #FFFFFF;
}

.c5 {
  color: #070707;
  font-size: 18px;
  font-weight: normal;
  margin: 0;
  padding: 0;
  vertical-align: top;
  color: #FFFFFF;
  text-transform: uppercase;
  -webkit-letter-spacing: 0.5px;
  -moz-letter-spacing: 0.5px;
  -ms-letter-spacing: 0.5px;
  letter-spacing: 0.5px;
  font-weight: bold;
}

.c10 {
  color: #0A169A;
  font-size: 22px;
  font-weight: normal;
  margin: 0;
  padding: 0;
  color: #FFFFFF;
  font-weight: bold;
}

.c2 {
  border: none;
  padding: 0;
  background: none;
}

<div
  className="c0"
>
  <div
    className="c1"
    direction="row"
  >
    <div>
      <div
        autoComplete="off"
        className="c2 c3"
        onClick={[Function]}
      >
        <div
          className="c4"
        >
          <h4
            className="c5"
            color="#070707"
          >
            Select a Season
          </h4>
          <svg
            className="c6 c7"
            color="#FFFFFF"
            height="12px"
            viewBox="0 0 24 24"
            width="12px"
          >
            <path
              d="M0,6.5l12,12,12-12Z"
            />
          </svg>
        </div>
        <div
          className="c8"
        />
      </div>
    </div>
  </div>
  <div
    className="c4"
    direction="row"
  >
    <div
      className="c9"
    >
      <h3
        className="c10"
        color="#0A169A"
      >
        10 - 1
      </h3>
      <p
        className="c11"
        color="#FFFFFF"
        letterSpacing="1px"
        size="14px"
      >
        <i>
          Win - Loss
        </i>
      </p>
    </div>
    <div
      className="c12"
    >
      <h3
        className="c10"
        color="#0A169A"
      >
        --
      </h3>
      <p
        className="c11"
        color="#FFFFFF"
        letterSpacing="1px"
        size="14px"
      >
        <i>
          Events Remaining
        </i>
      </p>
    </div>
  </div>
</div>
`;

exports[`renders correctly with NCAAF performance type 1`] = `
.c7 {
  display: inline-block;
  vertical-align: middle;
}

.c7 path {
  fill: #FFFFFF;
}

.c1 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-direction: row;
  -ms-flex-direction: row;
  flex-direction: row;
  -webkit-box-pack: justify;
  -webkit-justify-content: space-between;
  -ms-flex-pack: justify;
  justify-content: space-between;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  margin-bottom: 15px;
}

.c4 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-direction: row;
  -ms-flex-direction: row;
  flex-direction: row;
  -webkit-box-pack: justify;
  -webkit-justify-content: space-between;
  -ms-flex-pack: justify;
  justify-content: space-between;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
}

.c9 {
  -webkit-flex: 1;
  -ms-flex: 1;
  flex: 1;
}

.c12 {
  -webkit-flex: 2;
  -ms-flex: 2;
  flex: 2;
}

.c11 {
  margin: 0;
  color: #FFFFFF;
  font-size: 14px;
  font-weight: 100;
  font-family: FuturaPT,Roboto,Helvetica,sans-serif;
  -webkit-letter-spacing: 1px;
  -moz-letter-spacing: 1px;
  -ms-letter-spacing: 1px;
  letter-spacing: 1px;
}

.c3 {
  position: relative;
  padding: 15px;
  font-size: 14px;
  border: 2px solid #0A169A;
  border-radius: 3px;
  background: #FFFFFF;
  cursor: pointer;
}

.c3::-webkit-input-placeholder {
  color: #999999;
}

.c3::-moz-placeholder {
  color: #999999;
}

.c3:-ms-input-placeholder {
  color: #999999;
}

.c3::placeholder {
  color: #999999;
}

.c8 {
  position: absolute;
  top: calc(100%);
  left: 0;
  width: 100%;
  z-index: 10;
  border: 1px solid #EEEEEE;
  box-shadow: 0 20px 20px rgba(0,0,0,0.06);
  -webkit-transition: 0.1s ease-in-out all;
  transition: 0.1s ease-in-out all;
  opacity: 0;
  -webkit-transform: translateY(20px);
  -ms-transform: translateY(20px);
  transform: translateY(20px);
  visibility: hidden;
  margin-top: 5px;
}

.c6 {
  margin-left: 10px;
  -webkit-flex-shrink: 0;
  -ms-flex-negative: 0;
  flex-shrink: 0;
}

.c0 {
  padding: 25px;
  color: #FFFFFF;
}

.c5 {
  color: #070707;
  font-size: 18px;
  font-weight: normal;
  margin: 0;
  padding: 0;
  vertical-align: top;
  color: #FFFFFF;
  text-transform: uppercase;
  -webkit-letter-spacing: 0.5px;
  -moz-letter-spacing: 0.5px;
  -ms-letter-spacing: 0.5px;
  letter-spacing: 0.5px;
  font-weight: bold;
}

.c10 {
  color: #0A169A;
  font-size: 22px;
  font-weight: normal;
  margin: 0;
  padding: 0;
  color: #FFFFFF;
  font-weight: bold;
}

.c2 {
  border: none;
  padding: 0;
  background: none;
}

<div
  className="c0"
>
  <div
    className="c1"
    direction="row"
  >
    <div>
      <div
        autoComplete="off"
        className="c2 c3"
        onClick={[Function]}
      >
        <div
          className="c4"
        >
          <h4
            className="c5"
            color="#070707"
          >
            Select a Season
          </h4>
          <svg
            className="c6 c7"
            color="#FFFFFF"
            height="12px"
            viewBox="0 0 24 24"
            width="12px"
          >
            <path
              d="M0,6.5l12,12,12-12Z"
            />
          </svg>
        </div>
        <div
          className="c8"
        />
      </div>
    </div>
  </div>
  <div
    className="c4"
    direction="row"
  >
    <div
      className="c9"
    >
      <h3
        className="c10"
        color="#0A169A"
      >
        10 - 1
      </h3>
      <p
        className="c11"
        color="#FFFFFF"
        letterSpacing="1px"
        size="14px"
      >
        <i>
          Win - Loss
        </i>
      </p>
    </div>
    <div
      className="c12"
    >
      <h3
        className="c10"
        color="#0A169A"
      >
        --
      </h3>
      <p
        className="c11"
        color="#FFFFFF"
        letterSpacing="1px"
        size="14px"
      >
        <i>
          Events Remaining
        </i>
      </p>
    </div>
  </div>
</div>
`;

exports[`renders correctly with NFL performance type 1`] = `
.c7 {
  display: inline-block;
  vertical-align: middle;
}

.c7 path {
  fill: #FFFFFF;
}

.c1 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-direction: row;
  -ms-flex-direction: row;
  flex-direction: row;
  -webkit-box-pack: justify;
  -webkit-justify-content: space-between;
  -ms-flex-pack: justify;
  justify-content: space-between;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  margin-bottom: 15px;
}

.c4 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-direction: row;
  -ms-flex-direction: row;
  flex-direction: row;
  -webkit-box-pack: justify;
  -webkit-justify-content: space-between;
  -ms-flex-pack: justify;
  justify-content: space-between;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
}

.c9 {
  -webkit-flex: 1;
  -ms-flex: 1;
  flex: 1;
}

.c12 {
  -webkit-flex: 2;
  -ms-flex: 2;
  flex: 2;
}

.c11 {
  margin: 0;
  color: #FFFFFF;
  font-size: 14px;
  font-weight: 100;
  font-family: FuturaPT,Roboto,Helvetica,sans-serif;
  -webkit-letter-spacing: 1px;
  -moz-letter-spacing: 1px;
  -ms-letter-spacing: 1px;
  letter-spacing: 1px;
}

.c3 {
  position: relative;
  padding: 15px;
  font-size: 14px;
  border: 2px solid #0A169A;
  border-radius: 3px;
  background: #FFFFFF;
  cursor: pointer;
}

.c3::-webkit-input-placeholder {
  color: #999999;
}

.c3::-moz-placeholder {
  color: #999999;
}

.c3:-ms-input-placeholder {
  color: #999999;
}

.c3::placeholder {
  color: #999999;
}

.c8 {
  position: absolute;
  top: calc(100%);
  left: 0;
  width: 100%;
  z-index: 10;
  border: 1px solid #EEEEEE;
  box-shadow: 0 20px 20px rgba(0,0,0,0.06);
  -webkit-transition: 0.1s ease-in-out all;
  transition: 0.1s ease-in-out all;
  opacity: 0;
  -webkit-transform: translateY(20px);
  -ms-transform: translateY(20px);
  transform: translateY(20px);
  visibility: hidden;
  margin-top: 5px;
}

.c6 {
  margin-left: 10px;
  -webkit-flex-shrink: 0;
  -ms-flex-negative: 0;
  flex-shrink: 0;
}

.c0 {
  padding: 25px;
  color: #FFFFFF;
}

.c5 {
  color: #070707;
  font-size: 18px;
  font-weight: normal;
  margin: 0;
  padding: 0;
  vertical-align: top;
  color: #FFFFFF;
  text-transform: uppercase;
  -webkit-letter-spacing: 0.5px;
  -moz-letter-spacing: 0.5px;
  -ms-letter-spacing: 0.5px;
  letter-spacing: 0.5px;
  font-weight: bold;
}

.c10 {
  color: #0A169A;
  font-size: 22px;
  font-weight: normal;
  margin: 0;
  padding: 0;
  color: #FFFFFF;
  font-weight: bold;
}

.c2 {
  border: none;
  padding: 0;
  background: none;
}

<div
  className="c0"
>
  <div
    className="c1"
    direction="row"
  >
    <div>
      <div
        autoComplete="off"
        className="c2 c3"
        onClick={[Function]}
      >
        <div
          className="c4"
        >
          <h4
            className="c5"
            color="#070707"
          >
            Select a Season
          </h4>
          <svg
            className="c6 c7"
            color="#FFFFFF"
            height="12px"
            viewBox="0 0 24 24"
            width="12px"
          >
            <path
              d="M0,6.5l12,12,12-12Z"
            />
          </svg>
        </div>
        <div
          className="c8"
        />
      </div>
    </div>
  </div>
  <div
    className="c4"
    direction="row"
  >
    <div
      className="c9"
    >
      <h3
        className="c10"
        color="#0A169A"
      >
        10 - 1 - 3
      </h3>
      <p
        className="c11"
        color="#FFFFFF"
        letterSpacing="1px"
        size="14px"
      >
        <i>
          Win - Loss - Tie
        </i>
      </p>
    </div>
    <div
      className="c12"
    >
      <h3
        className="c10"
        color="#0A169A"
      >
        --
      </h3>
      <p
        className="c11"
        color="#FFFFFF"
        letterSpacing="1px"
        size="14px"
      >
        <i>
          Events Remaining
        </i>
      </p>
    </div>
  </div>
</div>
`;

exports[`renders correctly with toggledSidebar 1`] = `
.c7 {
  display: inline-block;
  vertical-align: middle;
}

.c7 path {
  fill: #FFFFFF;
}

.c1 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-direction: row;
  -ms-flex-direction: row;
  flex-direction: row;
  -webkit-box-pack: justify;
  -webkit-justify-content: space-between;
  -ms-flex-pack: justify;
  justify-content: space-between;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  margin-bottom: 15px;
}

.c4 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-direction: row;
  -ms-flex-direction: row;
  flex-direction: row;
  -webkit-box-pack: justify;
  -webkit-justify-content: space-between;
  -ms-flex-pack: justify;
  justify-content: space-between;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
}

.c9 {
  -webkit-flex: 1;
  -ms-flex: 1;
  flex: 1;
}

.c12 {
  -webkit-flex: 2;
  -ms-flex: 2;
  flex: 2;
}

.c11 {
  margin: 0;
  color: #FFFFFF;
  font-size: 14px;
  font-weight: 100;
  font-family: FuturaPT,Roboto,Helvetica,sans-serif;
  -webkit-letter-spacing: 1px;
  -moz-letter-spacing: 1px;
  -ms-letter-spacing: 1px;
  letter-spacing: 1px;
}

.c3 {
  position: relative;
  padding: 15px;
  font-size: 14px;
  border: 2px solid #0A169A;
  border-radius: 3px;
  background: #FFFFFF;
  cursor: pointer;
}

.c3::-webkit-input-placeholder {
  color: #999999;
}

.c3::-moz-placeholder {
  color: #999999;
}

.c3:-ms-input-placeholder {
  color: #999999;
}

.c3::placeholder {
  color: #999999;
}

.c8 {
  position: absolute;
  top: calc(100%);
  left: 0;
  width: 100%;
  z-index: 10;
  border: 1px solid #EEEEEE;
  box-shadow: 0 20px 20px rgba(0,0,0,0.06);
  -webkit-transition: 0.1s ease-in-out all;
  transition: 0.1s ease-in-out all;
  opacity: 0;
  -webkit-transform: translateY(20px);
  -ms-transform: translateY(20px);
  transform: translateY(20px);
  visibility: hidden;
  margin-top: 5px;
}

.c6 {
  margin-left: 10px;
  -webkit-flex-shrink: 0;
  -ms-flex-negative: 0;
  flex-shrink: 0;
}

.c0 {
  padding: 25px;
  color: #FFFFFF;
}

.c5 {
  color: #070707;
  font-size: 18px;
  font-weight: normal;
  margin: 0;
  padding: 0;
  vertical-align: top;
  color: #FFFFFF;
  text-transform: uppercase;
  -webkit-letter-spacing: 0.5px;
  -moz-letter-spacing: 0.5px;
  -ms-letter-spacing: 0.5px;
  letter-spacing: 0.5px;
  font-weight: bold;
}

.c10 {
  color: #0A169A;
  font-size: 22px;
  font-weight: normal;
  margin: 0;
  padding: 0;
  color: #FFFFFF;
  font-weight: bold;
}

.c2 {
  border: none;
  padding: 0;
  background: none;
}

<div
  className="c0"
>
  <div
    className="c1"
    direction="row"
  >
    <div>
      <div
        autoComplete="off"
        className="c2 c3"
        onClick={[Function]}
      >
        <div
          className="c4"
        >
          <h4
            className="c5"
            color="#070707"
          >
            Select a Season
          </h4>
          <svg
            className="c6 c7"
            color="#FFFFFF"
            height="12px"
            viewBox="0 0 24 24"
            width="12px"
          >
            <path
              d="M0,6.5l12,12,12-12Z"
            />
          </svg>
        </div>
        <div
          className="c8"
        />
      </div>
    </div>
  </div>
  <div
    className="c4"
    direction="row"
  >
    <div
      className="c9"
    >
      <h3
        className="c10"
        color="#0A169A"
      >
        10 - 1
      </h3>
      <p
        className="c11"
        color="#FFFFFF"
        letterSpacing="1px"
        size="14px"
      >
        <i>
          Win - Loss
        </i>
      </p>
    </div>
    <div
      className="c12"
    >
      <h3
        className="c10"
        color="#0A169A"
      >
        --
      </h3>
      <p
        className="c11"
        color="#FFFFFF"
        letterSpacing="1px"
        size="14px"
      >
        <i>
          Events Remaining
        </i>
      </p>
    </div>
  </div>
</div>
`;
